<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/txt_titulo"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="138dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/posto_de_gasolina"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription,HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_gasolina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/txt_preco_gasolina"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_etanol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="104dp"
                        android:text="@string/txt_preco_etanol"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/Text_edit_valor_gasolina"
                        android:layout_width="168dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:hint="@string/txt_edit_valor_gasolina"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        tools:ignore="MissingConstraints" />

                    <EditText
                        android:id="@+id/Text_edit_valor_etanol"
                        android:layout_width="174dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:hint="@string/txt_edit_valor_etanol"
                        android:importantForAutofill="no"
                        android:inputType="text" />


                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/text_resultado"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="60dp"
                android:layout_weight="1"
                android:text="@string/txt_resultado"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_Salvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#D5D6D6"
                android:text="@string/txt_button_calcular"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button_Limpar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#D5D6D6"
                android:enabled="false"
                android:text="@string/txt_button_resetar"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button_Finalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#D4D5D5"
                android:text="@string/txt_button_Finalizar"
                android:enabled="false"
                android:textColor="#000000" />


        </LinearLayout>

    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>



